# disjunctive_knapsack

./: .gitignore  README.md  benchmark.sh  pyproject.toml  results.ipynb
sol/test_correle/: test_500_1000_r0.01-0.sol
sol/test_correle/model/: date.txt  log_test_1000_1000_r0.001-0.txt  log_test_1000_1000_r0.002-0.txt  log_test_1000_1000_r0.005-0.txt  log_test_1000_1000_r0.01-0.txt  log_test_1000_1000_r0.02-0.txt  log_test_1000_1000_r0.05-0.txt  log_test_1000_2000_r0.001-0.txt  log_test_1000_2000_r0.002-0.txt  log_test_1000_2000_r0.005-0.txt  log_test_1000_2000_r0.01-0.txt  log_test_1000_2000_r0.02-0.txt  log_test_1000_2000_r0.05-0.txt  log_test_500_1000_r0.001-0.txt  log_test_500_1000_r0.002-0.txt  log_test_500_1000_r0.005-0.txt  log_test_500_1000_r0.01-0.txt  log_test_500_1000_r0.02-0.txt  log_test_500_1000_r0.05-0.txt  log_test_500_2000_r0.001-0.txt  log_test_500_2000_r0.002-0.txt  log_test_500_2000_r0.005-0.txt  log_test_500_2000_r0.01-0.txt  log_test_500_2000_r0.02-0.txt  log_test_500_2000_r0.05-0.txt  results.csv  test_1000_1000_r0.001-0.sol  test_1000_1000_r0.002-0.sol  test_1000_1000_r0.005-0.sol  test_1000_1000_r0.01-0.sol  test_1000_1000_r0.02-0.sol  test_1000_1000_r0.05-0.sol  test_1000_2000_r0.001-0.sol  test_1000_2000_r0.002-0.sol  test_1000_2000_r0.005-0.sol  test_1000_2000_r0.01-0.sol  test_1000_2000_r0.02-0.sol  test_1000_2000_r0.05-0.sol  test_500_1000_r0.001-0.sol  test_500_1000_r0.002-0.sol  (+10 more)
src/: dyn_prog.py  milp.py  model.py  model_rel_disj.py  model_rel_kp.py  parser.py  relax_disj.py  relax_kp.py  structures.py  utils.py
