[tool.poetry]
name = "disjunctive_knapsack"
version = "0.1.0"
description = "An optimization project about the knapsack problem"
authors = ["mdeboute <martin.deboute@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mip = "^1.13.0"
ipykernel = "^6.13.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
